# yt-rss

./: Cargo.toml  README.md  flake.nix
assets/: demo.tape
src/: main.rs
