[package]
name = "yt-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
comfy-table = "7.1.0"
error-stack = "0.4.1"
futures = "0.3.30"
memchr = "2.7.1"
reqwest = "0.11.26"
scraper = "0.19.0"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
